# zeusops-attendance-analysis

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/source/: architecture.md  conf.py  index.rst  readme.md
src/zeusops_attendance_analysis/: __init__.py  cli.py  csv.py  database.py
tests/: __init__.py  test_zeusops_attendance_analysis.py
